[tool.poetry]
name = "streamcontrol"
version = "0.1.0"
description = ""
authors = ["chalupaul <me@chalupaul.com>"]

[tool.poetry.dependencies]
python = "^3.9"
obs-websocket-py = "^0.5.3"
python-dotenv = "^0.19.2"
structlog = "^21.5.0"
colorama = "^0.4.4"
astral = "^2.2"
aiocron = "^1.8"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
